# xhci

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release.toml  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
lib/src/: lib.rs  macros.rs
lib/src/context/: mod.rs
lib/src/extended_capabilities/: debug.rs  mod.rs  usb_legacy_support_capability.rs  xhci_extended_message_interrupt.rs  xhci_local_memory.rs  xhci_message_interrupt.rs
lib/src/registers/: capability.rs  doorbell.rs  mod.rs  runtime.rs
lib/src/ring/trb/: mod.rs  transfer.rs
src/: accessor.rs  context.rs  error.rs  lib.rs  macros.rs  mapper.rs
src/accessor/: array.rs  mod.rs  single.rs
src/context/: device.rs  endpoint.rs  macros.rs  mod.rs  slot.rs
src/extended_capabilities/: debug.rs  hci_extended_power_management.rs  mod.rs  supported_protocol.rs  usb_legacy_support_capability.rs  xhci_extended_message_interrupt.rs  xhci_io_virtualization.rs  xhci_local_memory.rs  xhci_message_interrupt.rs  xhci_supported_protocol.rs
src/registers/: capability.rs  doorbell.rs  mod.rs  operational.rs  runtime.rs
src/ring/: erst.rs  mod.rs  trb.rs
src/ring/block/: transfer.rs
src/ring/trb/: command.rs  event.rs  mod.rs  transfer.rs
test/: Cargo.toml  Makefile  README.md  x86_64-unknown-ramen.json  x86_64-unknown-xhcios.json
test/.cargo/: config.toml
test/src/: allocator.rs  command_ring.rs  dcbaa.rs  event.rs  event_ring.rs  logger.rs  main.rs  mapper.rs  page_box.rs  pci.rs  ports.rs  registers.rs  scratchpat.rs  transfer_ring.rs  transition_helper.rs  xhc.rs
test/src/exchanger/: command.rs  mod.rs  receiver.rs  transfer.rs
test/src/multitask/: executor.rs  mod.rs  task.rs
test/src/pci/: mod.rs
test/src/pci/config/: bar.rs  common.rs  mod.rs
test/src/pci/config/type_spec/: mod.rs  non_bridge.rs
test/src/port/: endpoint.rs  mod.rs  spawner.rs
test/src/port/class_driver/: keyboard.rs  mod.rs  mouse.rs
test/src/port/class_driver/mass_storage/: mod.rs
test/src/port/class_driver/mass_storage/scsi/: command_data_block.rs  mod.rs  response.rs
test/src/port/init/: descriptor_fetcher.rs  endpoints_initializer.rs  fully_operational.rs  max_packet_size_setter.rs  mod.rs  resetter.rs  slot_structures_initializer.rs
test/src/ports/: context.rs  mod.rs
test/src/structures/: context.rs  dcbaa.rs  descriptor.rs  extended_capabilities.rs  mod.rs  registers.rs  scratchpad.rs
test/src/structures/ring/: mod.rs
test/src/structures/ring/command/: mod.rs
test/src/structures/ring/event/: mod.rs  segment_table.rs
test/src/structures/ring/transfer/: mod.rs
