[package]
name = "xhci"
version = "0.2.5"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library to handle xHCI"
repository = "https://github.com/toku-sa-n/xhch"
readme = "README.md"
categories = ["no-std", "os"]
keywords = ["no_std", "OS"]

[badges]
github = { repository = "toku-sa-n/xhci", workflow = "Rust" }

[dependencies]
accessor = "0.2.0"
bit_field = "0.10.1"
