[package]
name = "xhci"
version = "0.5.4"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library to handle xHCI"
repository = "https://github.com/toku-sa-n/xhci"
readme = "README.md"
categories = ["no-std", "os"]
keywords = ["no_std", "OS"]

[badges]
github = { repository = "toku-sa-n/xhci", workflow = "Rust" }

[dependencies]
accessor = "0.3.0"
bit_field = "0.10.1"
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
paste = "1.0.4"
